Add menu items to navigation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <header>
         <h1>Module 1 – Assignment 1</h1>
       <nav>
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Photos</li>
+            <li>Contact</li>
+            <li>Shop</li>
+        </ul>
       </nav>
     </header>
     <main>
