--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       </nav>
     </header>
     <main>
+        <h2>GitHub Practice</h2>
+        <p>This is in my master branch</p>
     </main>
     <footer>
     </footer>
