--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <p>This is in my master branch</p>
     </main>
     <footer>
+        <h3>Advanced Web II – Summer 2021</h3>
     </footer>
   </body>
 </html>
