--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title></title>
+    <title>Module 1 – Assignment 1</title>
     <meta http-equiv="Content-Type" content="text/html"; charset="UTF-8"/>
   </head>
   <body>
