Add css stylesheet link to head

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Module 1 – Assignment 1</title>
     <meta http-equiv="Content-Type" content="text/html"; charset="UTF-8"/>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <header>
