--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+HarunoUmi&family=Montserrat&display=swap" rel="stylesheet">
-    
+
   </head>
-  <body>
+  <body class="site">
     <header>
         <h1>Module 1 – Assignment 1</h1>
       <nav>
@@ -26,7 +26,7 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="site-content">
         <h2>GitHub Practice</h2>
         <p>This is in my master branch</p>
     </main>
