--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <body class="site">
     <header>
         <h1>Module 1 – Assignment 1</h1>
-        <nav>
+        <button class="hamburger">&#9776;</button>
+        <button class="cross">&#735;</button>
+
+        <nav class="menu">
             <ul>
                 <li>Home</li>
                 <li>About</li>
@@ -25,6 +28,17 @@
                 <li>Shop</li>
             </ul>
         </nav>
+
+        <nav class="desktop-nav">
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Photos</li>
+                <li>Contact</li>
+                <li>Shop</li>
+            </ul>
+        </nav>
+        
     </header>
     <main class="site-content">
         <h2>GitHub Practice</h2>
