Add js and jQuery links to html doc

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+HarunoUmi&family=Montserrat&display=swap" rel="stylesheet">
 
+    <!--Scripts-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
   </head>
   <body class="site">
     <header>
@@ -47,5 +50,6 @@
     <footer>
         <h3>Advanced Web II – Summer 2021</h3>
     </footer>
+    <script type="text/javascript" src="hamburger.js"></script>
   </body>
 </html>
