--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <main class="site-content">
         <h2>GitHub Practice</h2>
         <p>This is in my master branch</p>
+        <p>This is in my test branch</p>
     </main>
     <footer>
         <h3>Advanced Web II – Summer 2021</h3>
